# xxhash

./: .gitignore  LICENSE  README.md  stack.yaml  xxhash.cabal
bench/: Bench.hs
src/Data/Digest/: CXXHash.hsc  XXHash.hs
tests/: TestSuite.hs
