name:           xxhash
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Christian Marie <christian@ponies.io>
maintainer:     Christian Marie
description:    A Haskell-only implementation of the xxHash algorithm, a fast
                non-cryptographic hashing algorithm.
synopsis:       A Haskell-only implementation of the xxHash algorithm
category:       Data, Cryptography
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
                src/cbits/lz4.h, src/cbits/lz4.c

library
  build-depends:       base >=4.6 && <4.7,
                       bytestring,
                       tagged,
                       ghc-prim,
                       cereal,
                       crypto-api
  ghc-options:
  c-sources:           src/cbits/xxhash.c
  include-dirs:        src/cbits
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Data.Digest.XXHash
  other-modules:       Data.Digest.CXXHash

test-suite             check
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <4.7,
                       bytestring,
                       hspec,
                       QuickCheck,
                       xxhash
  hs-source-dirs:      tests
  main-is:             check.hs
  default-language:    Haskell2010

benchmark bench
  hs-source-dirs:      bench
  main-is:             Bench.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <4.7,
                       bytestring,
                       criterion,
                       digest,
                       murmur-hash,
                       deepseq,
                       hashable,
                       xxhash

  ghc-options:         -rtsopts
  default-language:    Haskell2010
